[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "solarathon"
description = "Template project for Solarathon 2023"
version = "0.0.1"
dependencies = [
    "solara==1.23.0",
    "pydantic==2.5.2"
    "yfinance==0.2.32",
    "mplfinance==0.12.10b0",
    "pandas_ta==0.3.14b0",
]

[project.optional-dependencies]
dev = [
    "mypy",
    "requests",
]

[tool.hatch.build]
include = [
  "**/*.css",
  "**/*.py",
]
